[package]
name = "xfg-examples"
version = "0.1.0"
authors = ["omni-viral <scareaangel@gmail.com>"]
repository = "https://github.com/omni-viral/xfg-rs"
publish = false

[dependencies]
cgmath = "0.16"
env_logger = "0.5"
genmesh = "0.5.0"
gfx-backend-dx12 = { git = "https://github.com/gfx-rs/gfx", optional = true, rev = "1083ce9a" }
gfx-backend-gl = { git = "https://github.com/gfx-rs/gfx", optional = true, rev = "1083ce9a" }
gfx-backend-empty = { git = "https://github.com/gfx-rs/gfx", rev = "1083ce9a" }
gfx-backend-metal = { git = "https://github.com/gfx-rs/gfx", optional = true, rev = "1083ce9a" }
gfx-backend-vulkan = { git = "https://github.com/gfx-rs/gfx", optional = true, rev = "1083ce9a" }
gfx-hal = { version = "0.1.0", git = "https://github.com/gfx-rs/gfx", rev = "1083ce9a" }
gfx-memory = { version = "0.1.0", git = "https://github.com/gfx-rs/gfx-memory", rev = "9125d94e" }
log = "0.4"
smallvec = "0.4"
winit = "0.11"
xfg = { path = ".." }

[features]
dx12 = ["gfx-backend-dx12"]
gl = ["gfx-backend-gl"]
metal = ["gfx-backend-metal"]
vulkan = ["gfx-backend-vulkan"]

[[bin]]
name = "flat"
path = "src/flat/main.rs"

[[bin]]
name = "pbm"
path = "src/pbm/main.rs"

[[bin]]
name = "pbm_deferred"
path = "src/pbm_deferred/main.rs"
